--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div>
-            <h1>Ricardo's Devs & Deesigners</h1>
+        <div class="hero">
+            <h1>Ricardo's Devs & Designers</h1>
             <p>We're a group devs & designers who will help your dream <span id="underline">come true.</span></p>
             <button>Let's chat</button>
         <div>
